--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -60,7 +60,7 @@
   .el-menu--horizontal .el-menu .el-submenu__title:hover {
     @include theme-menu-hover-style;
   }
-  
+
   // 顶栏
   .d2-theme-header {
     // 顶栏菜单空间不足时显示的滚动控件
@@ -71,6 +71,37 @@
         &:hover {
           color: $theme-header-item-color-hover;
           background: $theme-header-item-background-color-hover;
+        }
+      }
+    }
+    // 顶栏菜单
+    .el-breadcrumb {
+      .el-breadcrumb__item {
+        .el-breadcrumb__inner {
+          transition: border-top-color 0s;
+          color: $theme-header-item-color;
+          background: $theme-header-item-background-color;
+          &:hover {
+            color: $theme-header-item-color-hover;
+            background: $theme-header-item-background-color-hover;
+            i.fa {
+              color: inherit;
+            }
+          }
+          &:focus {
+            color: $theme-header-item-color-focus;
+            background: $theme-header-item-background-color-focus;
+            i.fa {
+              color: inherit;
+            }
+          }
+          &.is-active {
+            color: $theme-header-item-color-active;
+            background: $theme-header-item-background-color-active;
+            i.fa {
+              color: inherit;
+            }
+          }
         }
       }
     }
@@ -90,21 +121,29 @@
         transition: border-top-color 0s;
         color: $theme-header-item-color;
         background: $theme-header-item-background-color;
-        i.fa { color: inherit; }
+        i.fa {
+          color: inherit;
+        }
         &:hover {
           color: $theme-header-item-color-hover;
           background: $theme-header-item-background-color-hover;
-          i.fa { color: inherit; }
+          i.fa {
+            color: inherit;
+          }
         }
         &:focus {
           color: $theme-header-item-color-focus;
           background: $theme-header-item-background-color-focus;
-          i.fa { color: inherit; }
+          i.fa {
+            color: inherit;
+          }
         }
         &.is-active {
           color: $theme-header-item-color-active;
           background: $theme-header-item-background-color-active;
-          i.fa { color: inherit; }
+          i.fa {
+            color: inherit;
+          }
         }
       }
       .el-submenu {
@@ -112,21 +151,27 @@
           .el-submenu__title {
             color: $theme-header-item-color-active;
             background: $theme-header-item-background-color-active;
-            i.fa { color: inherit; }
+            i.fa {
+              color: inherit;
+            }
           }
         }
         .el-submenu__title {
           transition: border-top-color 0s;
           color: $theme-header-item-color;
           background: $theme-header-item-background-color;
-          i.fa { color: inherit; }
+          i.fa {
+            color: inherit;
+          }
           .el-submenu__icon-arrow {
             color: $theme-header-item-color;
           }
           &:hover {
             color: $theme-header-item-color-hover;
             background: $theme-header-item-background-color-hover;
-            i.fa { color: inherit; }
+            i.fa {
+              color: inherit;
+            }
             .el-submenu__icon-arrow {
               color: $theme-header-item-color-hover;
             }
@@ -134,7 +179,9 @@
           &:focus {
             color: $theme-header-item-color-focus;
             background: $theme-header-item-background-color-focus;
-            i.fa { color: inherit; }
+            i.fa {
+              color: inherit;
+            }
             .el-submenu__icon-arrow {
               color: $theme-header-item-color-focus;
             }
@@ -414,3 +461,6 @@
     }
   }
 }
+
+// 顶栏菜单
+
